Use My_Build to print explanation about Astro::MoonPhase and to process README Wrote README Set release date in Changes to Mar 25 2007

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for PostScript-Calendar
+Revision history for PostScript::Calendar
 
-0.01   Sat Nov 25 14:32:56 2006
-       Initial release.
+0.01   Mar 25 2007
+	- Initial release
