(These changes were supposed to be included in r1731) Documentation fixes:   Added notes on configuring Font::AFM     Mention that in README   Fixed SYNOPSIS for calendar.pl Updated Changes

--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 Revision history for PostScript::Calendar
 
+0.02   Apr 4 2007
+	- Setting title to the empty string now suppresses the title (RT#26089)
+	- Bug fixes:
+	  - add_event didn't respect newlines as documented
+	  - label_font was ignored
+	- Documentation fixes
+
 0.01   Mar 25 2007
 	- Initial release
