--- a/README
+++ b/README
@@ -43,7 +43,4 @@ CHANGES
 
 COPYRIGHT AND LICENSE
 
-Copyright 2010 Christopher J. Madsen
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
+{{ local $_ = $zilla->license->notice; chomp; $_ }}
