--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for PostScript::Calendar
 
-1.01   February 12, 2012
+1.02   NOT
+	- Release tests moved to xt/
+
+1.01   2012-02-12
 	- New constructor parameters: border_width, grid, grid_width,
 	  moon_dark, moon_light, & shade_color
 	- The shade methods can now take options to customize the color.
@@ -9,18 +12,18 @@ Revision history for PostScript::Calendar
 	- Use the function library provided by PostScript::File 2.20
 	- All comments are stripped from the generated PostScript
 
-1.00   November 11, 2010
+1.00   2010-11-11
 	- No functional changes
 	- Restart test if necessary to pick up timezone change (Windows)
 
-0.06   September 27, 2010
+0.06   2010-09-27
 	- Add a Creator comment only if we create the PostScript::File object
 	- Document that passing ps_file => undef creates a new object
 	- List the fonts we use even when given a ps_file
 	- Force timezone in tests for consistent results
 	- Figured out how to avoid Latin-1 in POD (S<C<< >>> works correctly)
 
-0.05   March 15, 2010
+0.05   2010-03-15
 	- PostScript::File 2.00 now provides pstr and metrics
 	  Font::AFM is no longer required!
 	  This makes it much easier to get PostScript::Calendar working.
@@ -29,22 +32,22 @@ Revision history for PostScript::Calendar
 	- The ps_file method actually works now
 	- Switch to Dist::Zilla for packaging
 
-0.04   June 25, 2008
+0.04   2008-06-25
 	- No functional changes
 	- Minor clean up to documentation
 	- Exclude ProhibitAccessOfPrivateData from perlcritic.t
 	- Skip perlcritic.t under AUTOMATED_TESTING
 	- Use Module::Build::DistVersion for packaging
 
-0.03   April 5, 2007
+0.03   2007-04-05
 	- Round dimensions to integers to avoid subtle errors (RT#26090)
 
-0.02   April 4, 2007
+0.02   2007-04-04
 	- Setting title to the empty string now suppresses the title (RT#26089)
 	- Bug fixes:
 	  - add_event didn't respect newlines as documented
 	  - label_font was ignored
 	- Documentation fixes
 
-0.01   March 25, 2007
+0.01   2007-03-25
 	- Initial release
